# fastapi-genai-boilerplate

./: .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  celery.Dockerfile  docker-compose.yml  get-pip.py  main-local.py  main.py  mypy.ini  pyproject.toml  requirements.txt  start.sh
app/: __init__.py
app/apis/: __init__.py
app/apis/monitor/: __init__.py  health.py  metrics.py  models.py  root.py  routers.py  service.py
app/apis/v1/: __init__.py
app/apis/v1/chat/: controller.py  helper.py  models.py  service.py
app/apis/v1/user/: controller.py  models.py  request.py  response.py  route.py  service.py
app/constants/: constants.py  messages.py
app/core/: __init__.py  config.py  enums.py  lifespan.py  lifetime.py  logging_utils.py  server.py  settings.py
app/core/cache/: cache.py
app/core/exceptions/: __init__.py  handle_exception.py
app/core/extra/: __init__.py  filter_logs.py  logger.py
app/core/middlewares/: __init__.py  logging.py  rate_limiter.py  request.py
app/core/responses/: __init__.py  json_response.py  stream_response.py
app/database/: __init__.py  base.py  session.py
app/services/: __init__.py
app/services/vectorstores/: __init__.py  interfaces.py
app/services/vectorstores/pgvector/: __init__.py  models.py  repository.py  service.py
app/workflows/graphs/: __init__.py
app/workflows/graphs/rag/: __init__.py  graph.py  model_map.py  states.py
app/workflows/graphs/rag/components/: answer_generator.py  conditional_edges.py  question_enhancer.py  question_rewriter.py  rag_executor.py  vertex_gemini_client.py
app/workflows/graphs/rag/prompts/: rag.md  system.md
app/workflows/graphs/rag/tools/: __init__.py  duckduckgo_search_tool.py  rag_tool.py
app/workflows/graphs/websearch/: __init__.py  graph.py  local_model_client.py  model_map.py  states.py
app/workflows/graphs/websearch/components/: answer_generator.py  conditional_edges.py  question_enhancer.py  question_rewriter.py  websearch_executor.py
app/workflows/graphs/websearch/prompts/: __init__.py  rag.md  rewriter.md  system.md
app/workflows/graphs/websearch/tools/: __init__.py  duckduckgo_search_tool.py  rag_tool.py  tavily_search_tool.py
app/workflows/pipelines/: __init__.py  rag_service.py
data/: bookname.txt  concat_by_book.py  extract_tripitaka.py
data/books/: book_03.json  book_05.json  book_06.json  book_07.json  book_08.json  book_10.json  book_12.json  book_13.json  book_14.json  book_18.json  book_21.json  book_23.json  book_24.json  book_26.json  book_27.json  book_28.json  book_31.json  book_34.json  book_38.json  book_39.json  book_42.json  book_44.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  cache.md  docker-compose.md  envs.md  example.env  local_model_setup.md  rate_limit.md
init-scripts/: init.sql  load.sql
rag_pipeline/: CalculateEmbeddings.ipynb  README.md
static/: swagger-ui-bundle.js
tests/: test_chat.py  test_user.py
tripitika_data/: README.md  concat_by_pitaka.py  extract_headers.py
tripitika_data/books/: book_01.json  book_02.json  book_04.json  book_09.json  book_11.json  book_15.json  book_16.json  book_17.json  book_19.json  book_20.json  book_22.json  book_25.json  book_29.json  book_30.json  book_32.json  book_33.json  book_35.json  book_36.json  book_37.json  book_40.json  book_41.json  book_43.json  book_45.json  concatenation_summary.txt
