[project]
name = "fastapi_boilerplate"
version = "0.0.1"
description = "FastAPI project template."
authors = [
    {name = "Keval Dekivadiya",email = "kevaldekivadiya2415@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "black (>=25.1.0,<26.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi-utils (>=0.8.0,<0.9.0)",
    "typing-inspect (>=0.9.0,<0.10.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
