[project]
name = "fastapi-genai-boilerplate"
version = "0.0.1"
description = "A production-ready FastAPI boilerplate designed for building scalable, AI-powered applications."
authors = [
    {name = "Keval Dekivadiya", email = "kevalkumar.dekivadiya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
loguru = ">=0.7.3,<0.8.0"
pydantic-settings = ">=2.9.1,<3.0.0"
fastapi-utils = ">=0.8.0,<0.9.0"
typing-inspect = ">=0.9.0,<0.10.0"
email-validator = "2.2.0"
gunicorn = ">=23.0.0,<24.0.0"
slowapi = ">=0.1.9,<0.2.0"
pytest = "^8.4.0"
setuptools = "<81"
prometheus-fastapi-instrumentator = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.2.0,<5.0.0"
black = ">=25.1.0,<26.0.0"
isort = ">=5.10.1,<6.0.0"
mypy = ">=1.16.0,<2.0.0"
ruff = ">=0.4.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
